--- a/config/database.yml
+++ b/config/database.yml
@@ -13,13 +13,14 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  host: <%= ENV.fetch("DB_HOST") { "localhost" } %>
+  username: <%= ENV["RS_DB_USER"] %>
+  password: <%= ENV["RS_DB_PASS"] %>
+  host: <%= ENV.fetch("RS_DB_HOST") { "localhost" } %>
+  port: <%= ENV.fetch("RS_DB_PORT") { 3306 } %>
 
 development:
   <<: *default
-  database: reedsy_store_development
+  database: reedsy_store_dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -47,9 +48,3 @@ test:
 #
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
-#
-production:
-  <<: *default
-  database: reedsy_store_production
-  username: reedsy_store
-  password: <%= ENV["REEDSY_STORE_DATABASE_PASSWORD"] %>
